--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ Deprecated==1.2.14
 dnspython==2.3.0
 et-xmlfile==1.1.0
 Flask==3.0.0
+Flask-Cors==4.0.0
 frozenlist==1.3.3
 gcsa==2.1.0
 google-api-core==2.11.1
@@ -31,6 +32,7 @@ google-auth-httplib2==0.1.0
 google-auth-oauthlib==0.8.0
 googleapis-common-protos==1.60.0
 gptcache==0.1.32
+gunicorn==22.0.0
 h11==0.14.0
 htmldate==1.4.3
 httpcore==0.16.3
@@ -79,6 +81,7 @@ pypandoc==1.11
 pyparsing==3.1.0
 python-dateutil==2.8.2
 python-docx==0.8.11
+python-dotenv==1.0.1
 python-magic==0.4.27
 python-pptx==0.6.21
 pytz==2023.3
