--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,48 @@
+beautiful-date==2.3.0
+blinker==1.8.2
+cachetools==5.3.3
+certifi==2024.7.4
+charset-normalizer==3.3.2
+click==8.1.7
 Flask==3.0.3
-Flask_Cors==4.0.0
+Flask-Cors==4.0.0
 gcsa==2.1.0
+google-api-core==2.19.1
+google-api-python-client==2.136.0
+google-auth==2.31.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==0.8.0
+googleapis-common-protos==1.63.2
+gunicorn==22.0.0
+httplib2==0.22.0
+idna==3.7
+importlib_metadata==8.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
 numpy==1.23.5
+oauthlib==3.2.2
+packaging==24.1
 pandas==1.5.3
+proto-plus==1.24.0
+protobuf==5.27.2
+psycopg2==2.9.9
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2023.3
-Requests==2.32.3
-gunicorn==22.0.0
+pytz-deprecation-shim==0.1.0.post0
+requests==2.32.3
+requests-oauthlib==2.0.0
+rsa==4.9
+six==1.16.0
+SQLAlchemy==2.0.31
+typing_extensions==4.12.2
+tzdata==2024.1
+tzlocal==4.3.1
+uritemplate==4.1.1
+urllib3==2.2.2
+Werkzeug==3.0.3
+zipp==3.19.2
